Add basic UI for the game

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
 	<title>Battleship</title>
 </head>
 <body>
-  <h1>Battleship here</h1>
+  <h1>Battleship</h1>
+  <main>
+	<div id="board-one">
+		
+	</div>
+	<div id="board-two">
+
+	</div>
+  </main>
 </body>
 </html>
