Add game stages -Add startScreen and placeShips stages -Add font and style for respective stages

--- a/src/index.html
+++ b/src/index.html
@@ -4,16 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Battleship</title>
+	<link rel="icon" type="image/x-icon" href="../src/assets/icons/favicon.png">
+	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <h1>Battleship</h1>
   <main>
-	<div id="board-one">
-		
-	</div>
-	<div id="board-two">
 
-	</div>
   </main>
 </body>
 </html>
